--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
    <head>
+     <script src = "scripts/main.js"></script>
      <title>Eva Fernandes</title>
    </head>
-   <body>
+   <body onload="main()">
      <h1>Hi I am Eva!</h1>
+     <p id="today"></p>
   </body>
   </html>
