photos letter changed

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
    <body onload="main()">
      <h1>Hi I am Eva!</h1>
      <p id="today"></p>
-     <img src="images/Img1.jpg"</img>
+     <img src="Images/Img1.jpg"</img>
   </body>
   </html>
